--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-immutable": "^1.6.0",
+    "jest": "^22.0.6",
     "mocha": "^4.1.0",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
