--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-immutable": "^1.6.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.0.6",
     "mocha": "^4.1.0",
     "raw-loader": "^0.5.1",
