--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -18,16 +19,23 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-immutable": "^1.6.0",
+    "css-loader": "^0.28.8",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.0.6",
     "mocha": "^4.1.0",
+    "postcss": "^6.0.16",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.10",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.1.3",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "create-react-class": "^15.6.2",
     "immutable": "^3.8.2",
     "react": "^16.2.0",
