--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
-    "create-react-class": "^15.6.2",
+    "css-loader": "^0.28.11",
     "immutable": "^3.8.2",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.6",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-markdown": "^3.1.4",
     "react-redux": "^5.0.6",
-    "react-router": "^3.2.0",
-    "redux": "^3.7.2"
+    "react-router-dom": "^5.0.1",
+    "redux": "^3.7.2",
+    "style-loader": "^0.19.1"
   },
   "babel": {
     "presets": [
